--- a/package.json
+++ b/package.json
@@ -1,8 +1,28 @@
 {
-  "name": "create-typeorm-entity-copy",
-  "version": "1.0.0",
+  "name": "create-typeorm-entity",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
+  "bin": {
+    "create-typeorm-entity": "../bin/create-typeorm-entity"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "typeorm",
+    "entity",
+    "orm",
+    "typeorm-entity",
+    "typeorm-entity",
+    "typeorm-entity-cli",
+    "typeorm-entity-generator",
+    "cli"
+  ],
+  "files": [
+    "../bin/",
+    "./src/"
+  ],
   "scripts": {
     "start": "ts-node src/cli.ts",
     "build": "rm -rf dist && tsc",
@@ -10,6 +30,7 @@
   },
   "dependencies": {
     "arg": "^5.0.1",
+    "esm": "^3.2.25",
     "inquirer": "^8.2.0"
   },
   "devDependencies": {
