--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-typeorm-entity",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.0",
   "main": "index.js",
   "license": "MIT",
   "bin": {
